<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WFL</string>
    <string name="login_activity_label">Sinch Messaging Tutorial</string>

    <string name="username">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="fb_login">LOGIN VIA FACEBOOK</string>
    <string name="sign_up_here">SIGN UP FOR AN ACCOUNT HERE</string>
    <string name="log_in">LOGIN</string>

    <string name="name_label">NAME</string>
    <string name="email_label">EMAIL</string>
    <string name="password_label">PASSWORD</string>
    <string name="sign_up">SIGN UP</string>

    <string name="message_elipses">Message...</string>
    <string name="title_activity_list_users">ListUsersActivity</string>
    <string name="title_activity_messaging">MessagingActivity</string>

    <string name="firebase_url">https://dazzling-heat-6981.firebaseio.com/</string>
    <string name="facebook_app_id">613714078766358</string>

    <string name="parse_app_id">VbMeH3TbACtNQKKl4y8EocBFT4LuSjHQrz5kWMWv</string>
    <string name="parse_client_key">lzRt3lHE6V2i3yHYmiUxSrRKfCvXJxQoNX6h8mVJ</string>
    <string name="title_activity_invite_friends">InviteFriendsActivity</string>
    <string name="title_activity_signup">SignupActivity</string>

</resources>
