<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sinch.messagingtutorial.app.LoginActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/username"
            android:id="@+id/loginUsernameText"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/sinch_purple"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/loginUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="text"
            android:textSize="32sp"
            android:padding="10dp"
            android:textColor="@color/sinch_purple"
            android:background="@drawable/inputbox"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">
            <requestFocus/>
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/password"
            android:id="@+id/loginPasswordText"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/sinch_purple"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="40dp"
            android:inputType="textPassword"
            android:textSize="32sp"
            android:padding="10dp"
            android:textColor="@color/sinch_purple"
            android:background="@drawable/inputbox"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">
        </EditText>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:background="@color/sinch_purple"
                android:text="@string/log_in"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:padding="12dp" />

        </LinearLayout>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/fbLoginButton"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:textSize="20sp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="WFL"
        android:id="@+id/appTitle"
        android:textColor="#471be5"
        android:textSize="40sp"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_here"
        android:id="@+id/signupButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:padding="12dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:background="#0a6f0c" />
</RelativeLayout>
